<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".InventorizationActivity">

    <LinearLayout
        android:id="@+id/navigate"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/my_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigate_my_list"
            android:onClick="GoToMyList"
            app:srcCompat="@drawable/my_list" />

        <ImageView
            android:id="@+id/inventorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigate_inventorization"
            app:srcCompat="@drawable/inventorization" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigate_camera"
            android:onClick="GoToCamera"
            app:srcCompat="@drawable/camera" />

        <ImageView
            android:id="@+id/all_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/navigate_all_items"
            android:onClick="GoToAllList"
            app:srcCompat="@drawable/all_list" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="GoToProfile"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="251dp"
        android:layout_height="49dp"
        android:onClick="GoToStart"
        android:text="Начать инвентаризацию"
        app:layout_constraintBottom_toTopOf="@+id/navigate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>